feat: 新增对话界面相关组件与功能
- 添加多个对话模型类(ChatMessage, ModelCard等)用于处理OpenAI API响应
- 实现对话任务相关的前端渲染逻辑(任务概览、操作按钮、消息摘要等)
- 新增对话链上下文管理功能，支持任务链的展开/收起
- 添加对话界面样式和交互组件(mounted context展示区等)
- 实现facade回复高亮和标记功能
- 完善对话相关测试用例
- 在HTTP服务器中添加chat facade端点